--- a/bloks/header/header.css
+++ b/bloks/header/header.css
@@ -2,7 +2,7 @@
   width: 880px;
   margin: 45px auto 0;
   display: flex;
-  flex-direction: column
+  flex-direction: column;
 }
 
 @media screen and (max-width: 879px) {
