--- a/bloks/gallery/__table/gallery__table.css
+++ b/bloks/gallery/__table/gallery__table.css
@@ -1,21 +1,21 @@
-.gallery {
+.gallery__table {
   display: grid;
   grid-template-columns: repeat(3, 282px);
   column-gap: 17px;
   row-gap: 20px;
   margin-top: 50px;
+  padding: 0;
 }
 
 @media screen and (max-width: 879px) {
-  .gallery {
+  .gallery__table {
     grid-template-columns: repeat(2, 282px);
     column-gap: auto;
   }
 }
 
 @media screen and (max-width: 650px) {
-  .gallery {
+  .gallery__table {
     grid-template-columns: repeat(1, 282px);
-    column-gap: auto;
  }
 }
