--- a/bloks/footer/__copyright/footer__copyright.css
+++ b/bloks/footer/__copyright/footer__copyright.css
@@ -1,6 +1,6 @@
 .footer__copyright {
   margin-top: 66px;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
