--- a/bloks/gallery/__place-like/gallery__place-like.css
+++ b/bloks/gallery/__place-like/gallery__place-like.css
@@ -2,8 +2,7 @@
   width: 22px;
   height: 19px;
   margin-right: 20px;
-  margin-top: 30px;
-  background-image: url(../../../images/like.png);
+  background-image: url(../../../images/like.svg);
   background-position: center;
   background-color: #fff;
   background-repeat: no-repeat;
