--- a/bloks/header/header.css
+++ b/bloks/header/header.css
@@ -2,12 +2,27 @@
   width: 880px;
   margin: 45px auto 0;
   display: flex;
-  flex-direction: column
+  flex-direction: column;
+  /* border-bottom: 1px solid #545454;
+  padding-bottom: 40px; */
+  box-sizing: border-box;
+}
+
+.header::after {
+  content: "";
+  height: 1px;
+  width: 100%;
+  background-color: #545454;
+  opacity: .7;
+  margin-top: 40px;
 }
 
 @media screen and (max-width: 879px) {
-.header{
+.header {
   margin-top: 28px;
   width: 100%;
+}
+.header::after {
+  margin-top: 30px;
 }
 }
