--- a/bloks/pop-up/__heading/pop-up__heading.css
+++ b/bloks/pop-up/__heading/pop-up__heading.css
@@ -1,4 +1,4 @@
-.profile__edit-heading {
+.pop-up__heading {
   font-family: 'Inter';
   font-size: 24px;
   font-weight: 900;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 650px) {
-  .profile__edit-heading {
+  .pop-up__heading {
     font-size: 18px;
     line-height: 22px;
     margin-top: 25px;
