--- a/bloks/pop-up/__overlay/pop-up__overlay.css
+++ b/bloks/pop-up/__overlay/pop-up__overlay.css
@@ -1,4 +1,4 @@
-.profile__edit-overlay {
+.pop-up__overlay {
   background-color: #000;
   opacity: .5;
   width: 100vw;
@@ -6,5 +6,5 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: -1;
 }
