--- a/bloks/profile/__add-button/profile__add-button.css
+++ b/bloks/profile/__add-button/profile__add-button.css
@@ -1,16 +1,17 @@
 .profile__add-button {
   width: 150px;
   height: 50px;
-  background-image: url(../../../images/add-button.png);
+  background: transparent;
+  background-image: url(../../../images/add.svg);
   background-position: center;
   background-repeat: no-repeat;
   border-color: #fff;
   border-style: solid;
   box-sizing: border-box;
   border-width: 2px;
-  background-color: #000;
   cursor: pointer;
   transition: .5s ease;
+  border-radius: 2px;
 }
 
 .profile__add-button:hover {
