--- a/bloks/profile/__edit-button/profile__edit-button.css
+++ b/bloks/profile/__edit-button/profile__edit-button.css
@@ -2,10 +2,10 @@
   width: 24px;
   height: 24px;
   margin-left: 18px;
-  background-image: url(../../../images/edit-button.jpg);
+  background: transparent;
+  background-image: url(../../../images/edit.svg);
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #000;
   border: solid 1px #fff;
   cursor: pointer;
   transition: .5s ease;
