--- a/bloks/profile/__name/profile__name.css
+++ b/bloks/profile/__name/profile__name.css
@@ -5,6 +5,9 @@
   font-size: 42px;
   font-weight: 500;
   line-height: 1.14;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 @media screen and (max-width: 650px) {
