--- a/pages/index.css
+++ b/pages/index.css
@@ -5,7 +5,6 @@
 
 @import url(../bloks/header/header.css);
 @import url(../bloks/header/__logo/header__logo.css);
-@import url(../bloks/header/__buttom-line/header__button-line.css);
 
 @import url(../bloks/content/content.css);
 
@@ -17,18 +16,21 @@
 @import url(../bloks/profile/__name/profile__name.css);
 @import url(../bloks/profile/__edit-button/profile__edit-button.css);
 @import url(../bloks/profile/__description/profile__description.css);
-@import url(../bloks/profile/__pop-up/profile__pop-up.css);
-@import url(../bloks/profile/__edit-form/profile__edit-form.css);
-@import url(../bloks/profile/__edit-heading/profile__edit-heading.css);
-@import url(../bloks/profile/__edit-name/profile__edit-name.css);
-@import url(../bloks/profile/__edit-description/profile__edit-description.css);
-@import url(../bloks/profile/__save-button/profile__save-button.css);
-@import url(../bloks/profile/__close-button/close__close-button.css);
-@import url(../bloks/profile/__close-icon/profile__close-icon.css);
-@import url(../bloks/profile/__edit-overlay/profile__edit-overlay.css);
 @import url(../bloks/profile/__add-button/profile__add-button.css);
 
+@import url(../bloks/pop-up/pop-up.css);
+@import url(../bloks/pop-up/_visability/pop-up_visability.css);
+@import url(../bloks/pop-up/__box/pop-up__box.css);
+@import url(../bloks/pop-up/__heading/pop-up__heading.css);
+@import url(../bloks/pop-up/__edit-form/pop-up__edit-form.css);
+@import url(../bloks/pop-up/__input/pop-up__input.css);
+@import url(../bloks/pop-up/__save-button/pop-up__save-button.css);
+@import url(../bloks/pop-up/__close-button/pop-up__close-button.css);
+@import url(../bloks/pop-up/__close-icon/pop-up__close-icon.css);
+@import url(../bloks/pop-up/__overlay/pop-up__overlay.css);
+
 @import url(../bloks/gallery/gallery.css);
+@import url(../bloks/gallery/__table/gallery__table.css);
 @import url(../bloks/gallery/__place/gallery__place.css);
 @import url(../bloks/gallery/__photo/gallery__photo.css);
 @import url(../bloks/gallery/__place-subscription/gallery__place-subscription.css);
@@ -38,7 +40,3 @@
 @import url(../bloks/footer/footer.css);
 @import url(../bloks/footer/__copyright/footer__copyright.css);
 
-h1, h2, h3, h4, h5, h6, p, ol, ul {
-  padding: 0;
-  margin: 0;
-}
