--- a/bloks/gallery/__place-name/gallery__place-name.css
+++ b/bloks/gallery/__place-name/gallery__place-name.css
@@ -1,9 +1,10 @@
 .gallery__place-name {
   width: 70%;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial;
   font-size: 24px;
   font-weight: 900;
   line-height: 29px;
+  margin: 0;
   margin-top: 25px;
   margin-left: 21px;
   overflow: hidden;
