--- a/bloks/pop-up/__heading/pop-up__heading.css
+++ b/bloks/pop-up/__heading/pop-up__heading.css
@@ -1,9 +1,12 @@
 .pop-up__heading {
-  font-family: 'Inter';
+  font-family: 'Inter', Arial;
   font-size: 24px;
   font-weight: 900;
   line-height: 29px;
+  margin: 0;
   margin-top: 34px;
+  align-self: start;
+  margin-left: 36px;
 }
 
 @media screen and (max-width: 650px) {
@@ -11,5 +14,6 @@
     font-size: 18px;
     line-height: 22px;
     margin-top: 25px;
+    margin-left: 22px;
   }
 }
