--- a/bloks/pop-up/__input/pop-up__input.css
+++ b/bloks/pop-up/__input/pop-up__input.css
@@ -1,5 +1,5 @@
 .pop-up__input {
-  font-family: 'Inter';
+  font-family: 'Inter', Arial;
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
