--- a/bloks/pop-up/__save-button/pop-up__save-button.css
+++ b/bloks/pop-up/__save-button/pop-up__save-button.css
@@ -1,5 +1,5 @@
 .pop-up__save-button {
-  font-family: 'Inter';
+  font-family: 'Inter', Arial;
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
@@ -24,6 +24,6 @@
   .pop-up__save-button {
     width: 100%;
     margin-top: 45px;
-    height: 43px;
+    height: 46px;
   }
 }
