--- a/bloks/profile/__description/profile__description.css
+++ b/bloks/profile/__description/profile__description.css
@@ -1,7 +1,8 @@
 .profile__description {
   color: #fff;
+  margin: 0;
   margin-top: 16px;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -9,11 +10,13 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  max-width: calc(100vw - 400px);
 }
 
 @media screen and (max-width: 650px) {
   .profile__description {
     font-size: 14px;
     line-height: 17px;
+    max-width: 250px;
   }
 }
