--- a/bloks/profile/__name/profile__name.css
+++ b/bloks/profile/__name/profile__name.css
@@ -1,19 +1,21 @@
 .profile__name {
   color: #fff;
+  margin: 0;
   margin-top: 21px;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial;
   font-size: 42px;
   font-weight: 500;
   line-height: 1.14;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  max-width: calc(100vw - 400px);
 }
 
 @media screen and (max-width: 650px) {
   .profile__name{
-    margin: 0;
    font-size: 27px;
    line-height: 33px;
+   max-width: 269px;
   }
 }
