--- a/bloks/profile/profile.css
+++ b/bloks/profile/profile.css
@@ -9,8 +9,8 @@
 @media screen and (max-width: 879px) {
   .profile {
     width: 100%;
-    margin-left: 19px;
-    margin-right: 19px;
+    /* margin-left: 19px;
+    margin-right: 19px; */
   }
 }
 
