fix 3rd fersion

--- a/bloks/footer/__copyright/footer__copyright.css
+++ b/bloks/footer/__copyright/footer__copyright.css
@@ -8,3 +8,9 @@
   line-height: 22px;
   color: #545454;
 }
+
+@media screen and (max-width: 879px) {
+  .footer__copyright {
+    margin-left: 19px;
+  }
+}
