--- a/bloks/pop-up/pop-up.css
+++ b/bloks/pop-up/pop-up.css
@@ -1,5 +1,5 @@
 .pop-up {
-  position: absolute;
+  position: fixed;
   left: calc(( 100vw - 430px) / 2);
   top: calc(( 100vh - 330px) / 2);
   z-index: 1;
