--- a/bloks/profile/__description/profile__description.css
+++ b/bloks/profile/__description/profile__description.css
@@ -10,10 +10,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  max-width: calc(100vw - 400px);
+  max-width: 400px;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 750px) {
   .profile__description {
     font-size: 14px;
     line-height: 17px;
