--- a/bloks/profile/__name/profile__name.css
+++ b/bloks/profile/__name/profile__name.css
@@ -9,10 +9,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  max-width: calc(100vw - 400px);
+  max-width: 400px;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 750px) {
   .profile__name{
    font-size: 27px;
    line-height: 33px;
