--- a/bloks/gallery/__place-like/gallery__place-like.css
+++ b/bloks/gallery/__place-like/gallery__place-like.css
@@ -1,8 +1,9 @@
 .gallery__place-like {
   width: 22px;
   height: 19px;
-  margin-right: 20px;
   background-image: url(../../../images/like.svg);
+  margin-right: 20px;
+  align-self: flex-end;
   background-position: center;
   background-color: #fff;
   background-repeat: no-repeat;
@@ -14,4 +15,8 @@
 .gallery__place-like:hover {
   opacity: .5;
   transition: .5s ease;
+}
+
+.gallery__place-like_active {
+  background-image: url(../../../images/Union.svg);
 }
