--- a/bloks/pop-up/pop-up.css
+++ b/bloks/pop-up/pop-up.css
@@ -2,7 +2,8 @@
   position: fixed;
   left: calc(( 100vw - 430px) / 2);
   top: calc(( 100vh - 330px) / 2);
-  z-index: 1;
+  z-index: 2;
+  transition: .5s ease;
 }
 
 
