--- a/bloks/gallery/__table/gallery__table.css
+++ b/bloks/gallery/__table/gallery__table.css
@@ -5,6 +5,7 @@
   row-gap: 20px;
   margin-top: 50px;
   padding: 0;
+  min-height: calc(100vh - 490px);
 }
 
 @media screen and (max-width: 879px) {
@@ -17,5 +18,6 @@
 @media screen and (max-width: 650px) {
   .gallery__table {
     grid-template-columns: repeat(1, 282px);
+    min-height: calc(100vh - 600px);
  }
 }
