--- a/bloks/pop-up/__save-button/pop-up__save-button.css
+++ b/bloks/pop-up/__save-button/pop-up__save-button.css
@@ -10,9 +10,10 @@
   color: #fff;
   height: 50px;
   width: 100%;
-  margin-top: 48px;
+  margin-top: 31px;
   cursor: pointer;
   transition: .5s ease;
+  padding: 0;
 }
 
 .pop-up__save-button:hover {
