--- a/bloks/place/__like/place__like.css
+++ b/bloks/place/__like/place__like.css
@@ -1,4 +1,4 @@
-.gallery__place-like {
+.place__like {
   width: 22px;
   height: 19px;
   background-image: url(../../../images/like.svg);
@@ -12,11 +12,9 @@
   transition: .5s ease;
 }
 
-.gallery__place-like:hover {
+.place__like:hover {
   opacity: .5;
   transition: .5s ease;
 }
 
-.gallery__place-like_active {
-  background-image: url(../../../images/Union.svg);
-}
+
