--- a/bloks/place/__remove/place__remove.css
+++ b/bloks/place/__remove/place__remove.css
@@ -1,4 +1,4 @@
-.gallery__place-remove {
+.place__remove {
   position: absolute;
   z-index: 1;
   right: 20px;
@@ -6,7 +6,7 @@
   transition: .5s ease;
 }
 
-.gallery__place-remove:hover {
+.place__remove:hover {
   transition: .5s ease;
   opacity: .6;
 }
