classes first revue fix

--- a/bloks/pop-up/__save-button/_disabled/pop-up__save-button_disabled.css
+++ b/bloks/pop-up/__save-button/_disabled/pop-up__save-button_disabled.css
@@ -5,3 +5,8 @@
   box-sizing: border-box;
   border: #000 solid 1px;
 }
+
+.pop-up__save-button_disabled:hover{
+  opacity: .2;
+  cursor: default;
+}
