--- a/src/bloks/place/__name/place__name.css
+++ b/src/bloks/place/__name/place__name.css
@@ -4,9 +4,7 @@
   font-size: 24px;
   font-weight: 900;
   line-height: 29px;
-  margin: 0;
-  margin-top: 25px;
-  margin-left: 21px;
+  margin: 25px 0 32px 21px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
