--- a/main.css
+++ b/main.css
@@ -38,8 +38,10 @@
 .place__remove{position:absolute;right:20px;top:20px;transition:.5s ease;z-index:1}.place__remove:hover{opacity:.6;transition:.5s ease}
 .place__photo{border-radius:10px 10px 0 0;min-height:282px;-o-object-position:center;object-position:center;width:282px}
 .place__subscription{align-items:center;display:flex;flex-direction:row;justify-content:space-between;width:100%}
-.place__name{font-family:Inter,Arial;font-size:24px;font-weight:900;line-height:29px;margin:25px 0 0 21px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;width:70%}
-.place__like{align-self:flex-end;background-color:#fff;background-image:url(7913ddfd147a48616b09.svg);background-position:50%;background-repeat:no-repeat;border:none;cursor:pointer;height:19px;margin-right:20px;transition:.5s ease;width:22px}.place__like:hover{opacity:.5;transition:.5s ease}
+.place__name{font-family:Inter,Arial;font-size:24px;font-weight:900;line-height:29px;margin:25px 0 32px 21px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;width:70%}
+.place__likes{align-items:center;display:flex;flex-direction:column;margin-right:20px}
+.place__like{align-self:flex-end;background-color:#fff;background-image:url(7913ddfd147a48616b09.svg);background-position:50%;background-repeat:no-repeat;border:none;cursor:pointer;height:19px;transition:.5s ease;width:22px}.place__like:hover{opacity:.5;transition:.5s ease}
+.place__like-counter{font-family:Inter;font-size:13px;font-weight:400;line-height:16px;margin-top:3px;transition:.5s ease}
 .place__like_active{background-image:url(e787eeb70bb65b7b453a.svg)}
 .footer{display:flex;justify-items:start;padding-bottom:60px;width:880px}@media screen and (max-width:879px){.footer{width:100%}}
 .footer__copyright{color:#545454;font-family:Inter,Arial;font-size:18px;font-style:normal;font-weight:400;line-height:22px;margin:66px 0 0}@media screen and (max-width:879px){.footer__copyright{margin-left:19px}}
